# AudioStream-WiFi

./: README.md  ToContinuoDev.txt  audioStream.bat
Android_Client/app/res/layout/: activity_main.xml
Android_Client/app/src/main/: AndroidManifest.xml
Android_Client/app/src/main/java/com/example/audiostream/: MainActivity.java
Android_Client/app/src/main/java/com/example/audiostream/generate_Apk/: audiostream.apk
PC_Server/: README.md  server.py
android/audiostream_wifi_client/: README.md  build.gradle
android/audiostream_wifi_client/src/main/java/com/motakosay/audiostream/: AudioReceiver.java  AudioStreamClient.java  DiscoveryListener.java  JitterBuffer.java
python/: pyproject.toml
python/audiostream_wifi_server/: __init__.py  discovery.py  server.py
python/examples/: run_server.py
